--- a/404.html
+++ b/404.html
@@ -31,15 +31,15 @@
   <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a href="http://hjh0915.github.io/"><h1>CS学习</h1></a>
+      <a href="http://hjh0915.github.io"><h1>CS学习</h1></a>
       <p class="lead">
       学习CS，需要记录点滴。从这里出发，向着诗和远方...
       </p>
     </div>
 
     <ul class="sidebar-nav">
-      <li><a href="http://hjh0915.github.io/">首页</a> </li>
-      <li><a href="http://hjh0915.github.io//posts">linux入门</a> </li>
+      <li><a href="http://hjh0915.github.io">首页</a> </li>
+      <li><a href="http://hjh0915.github.io/posts">linux入门</a> </li>
 
       
     </ul>
@@ -50,7 +50,7 @@
 
     <div class="content container">
     <h1>404: Page not found</h1>
-<p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="http://hjh0915.github.io/">Head back home</a> to try finding it again.</p>
+<p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="http://hjh0915.github.io">Head back home</a> to try finding it again.</p>
     </div>
 
   </body>
